--- a/part-4.html
+++ b/part-4.html
@@ -1043,28 +1043,59 @@
             <h2 class="display-3 fw-bolder lh-1 mb-4">Tips for Collaboration</h2>
           </div>
           <div class="col-md-6">
-            <h5>
-              <img class="me-1" src="images/common/film.svg" width="16" alt="film icon">
-              <a class="link-light" href="https://web.microsoftstream.com/" target="_blank">Watch on Microsoft Stream</a>
-            </h5>
+            <h5>Summary</h5>
             <ul>
-              <li>Lorem Ipsum.</li>
+              <li>Keep track of what each other is doing.</li>
+              <li>Synchronize often, before and after working.</li>
             </ul>
           </div>
         </header>
         <article class="row justify-content-center">
           <div class="col-md-6 col-xxl-5 py-3">
-            <h3 class="color-buas text-center">Tips for setting up</h3>
+            <h3 class="color-buas text-center">Tips for starting</h3>
+            <h4>Creating the repository</h4>
             <p>The easiest way to start is by copying the group template, but before you click on &ldquo;generate&rdquo;, think of the following questions:</p>
             <p>Think of how you want to <strong>name</strong> your group repository!</p>
             <ul>
               <li>If you use an organization profile (<a href="https://github.com/account/organizations/new?plan=team_free" target="_blank" title="Create organization">click here to create one</a>), then the name of your repository doesn't need to include your profile name. This is the case for this guide.</li>
               <li>If you call your repository <strong><em>[organization&nbsp;or&nbsp;user&nbsp;name]</em>.<wbr>github.io</strong>, then this will be also your URL. For example, the repository at <a href="https://github.com/buas-media-interactive/buas-media-interactive.github.io" target="_blank">github.com/<wbr>buas-media-interactive/<wbr>buas-media-interactive.github.io</a> can be visited at <a href="https://buas-media-interactive.github.io/" target="_blank">buas-media-interactive.github.io</a></li>
             </ul>
+            <h4>Dividing work</h4>
+            <p>If you want to achieve a consistent website, the first page is the one that will take the most work, the other ones being variations where you only change the content. It can be a good strategy to start working on a page that is the most “standard” possible – i.e. one that has the same layout and components as most others – rather than the front page. Choose the components you need to use there, and don’t hesitate to use this page as a sort of “style guide” from which you can generate all other pages.</p>
+            <p>Decide on a way to divide work. This could be:</p>
+            <ul>
+              <li>Assigning different pages to different students</li>
+              <li>Giving different roles: one student prepares the image assets, another one builds the headers and footers, another one works on the main grid, etc.</li>
+            </ul>
+            <p>Make sure that all the common elements are discussed thoroughly before distributing work: colour schemes, style guides, fonts, logos, should be decided together.</p>
           </div>
           <div class="col-md-6 col-xxl-5 py-3 bg-lightblue">
-            <h3 class="text-center">Heading</h3>
-            <p>Paragraph</p>
+            <h3 class="text-center">Tips for synchronizing</h3>
+            <p>The most important tip is that you should <strong>synchronize as often as necessary</strong>, <u>before and after</u> working on shared code.</p>
+            <p>Most of the difficulties that teams encounter when collaborating comes from either trying to work on the same thing at the same time or from not being aware of what others do.</p>
+            <p>Committing and Synchronising your changes takes a few seconds, but it will save you time in the long run.</p>
+            <p>If one of you makes important changes at some point, do not hesitate to send a message to the rest of the team so they can update their version and see these changes.</p>
+            <p>Branches are another way of working which helps you work in isolation, but they are trickier to use.</p>
+            <h4>Example workflow</h4>
+            <p>Following the steps below will help you prevent errors:</p>
+            <ol>
+              <li>Start by creating the group repository.</li>
+              <li>Add contributors to the group repository: all members of the team should be able to edit. At this point, all team members should start synchronizing</li>
+              <li>Create a landing page. This should be simple enough that it doesn&rsquo;t require complex collaboration.</li>
+              <li>Publish the group repository via GitHub pages.</li>
+              <li>Discuss web design and divide roles.</li>
+              <li>Every time a student edits something, follow the steps below:
+                <ol>
+                  <li>Go to GitHub Desktop and click on <strong>Fetch origin</strong> to retrieve the latest version of the group website.</li>
+                  <li>Go to Dreamweaver to edit HTML code.</li>
+                  <li>After editing, <strong>save</strong> the files on your laptop.</li>
+                  <li>Then <strong>commit</strong> and <strong>push</strong> in GitHub.</li>
+                  <li>Never assume that there are no changes to synchronize or that your changes won&rsquo;t affect others, synchronize every time!</li>
+                  <li>Always check the result on GitHub Pages. Never assume that things that work on your laptop will work online.</li>
+                </ol>
+              </li>
+              <li>Double-check the group checklist before the final hand-in.</li>
+            </ol>
           </div>
         </article>
         <footer class="row bg-gray">
