Updated menu bar

--- a/part-1.html
+++ b/part-1.html
@@ -27,43 +27,45 @@
           </a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle text-light d-flex align-items-center px-2 px-md-3 active bg-gradient" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">
-            Part 1
+          <a class="nav-link dropdown-toggle text-light d-flex align-items-center px-2 px-lg-3 active bg-gradient" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">
+            <span class="d-none d-sm-inline">Part&nbsp;</span>
+            1
           </a>
           <ul class="dropdown-menu">
             <li>
-              <a class="dropdown-item" href="#part_1">Publish your first page</a>
+              <a class="dropdown-item" href="part-1.html#part_1">Publish your first page</a>
             </li>
             <li>
               <hr class="dropdown-divider">
             </li>
             <li>
-              <a class="dropdown-item" href="#overview_goals"><span class="badge rounded-pill bg-buas">1.1</span> Overview & goals</a>
+              <a class="dropdown-item" href="part-1.html#overview_goals"><span class="badge rounded-pill bg-buas">1.1</span> Overview & goals</a>
             </li>
             <li>
-              <a class="dropdown-item" href="#what_is_a_webpage"><span class="badge rounded-pill bg-buas">1.2</span> What is a web page?</a>
+              <a class="dropdown-item" href="part-1.html#what_is_a_webpage"><span class="badge rounded-pill bg-buas">1.2</span> What is a web page?</a>
             </li>
             <li>
-              <a class="dropdown-item" href="#cybersecurity"><span class="badge rounded-pill bg-buas">1.3</span> Cybersecurity and privacy</a>
+              <a class="dropdown-item" href="part-1.html#cybersecurity"><span class="badge rounded-pill bg-buas">1.3</span> Cybersecurity and privacy</a>
             </li>
             <li>
-              <a class="dropdown-item" href="#setting_up_tools"><span class="badge rounded-pill bg-buas">1.4</span> Set up the tools</a>
+              <a class="dropdown-item" href="part-1.html#setting_up_tools"><span class="badge rounded-pill bg-buas">1.4</span> Set up the tools</a>
             </li>
             <li>
-              <a class="dropdown-item" href="#basic_html"><span class="badge rounded-pill bg-buas">1.5</span> The basic structure of HTML</a>
+              <a class="dropdown-item" href="part-1.html#basic_html"><span class="badge rounded-pill bg-buas">1.5</span> The basic structure of HTML</a>
             </li>
             <li>
-              <a class="dropdown-item" href="#editing_publishing"><span class="badge rounded-pill bg-buas">1.6</span> Edit and publish</a>
+              <a class="dropdown-item" href="part-1.html#editing_publishing"><span class="badge rounded-pill bg-buas">1.6</span> Edit and publish</a>
             </li>
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link dropdown-toggle text-light d-flex align-items-center px-2 px-md-3" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">
-            Part 2
+          <a class="nav-link dropdown-toggle text-light d-flex align-items-center px-2 px-lg-3" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">
+            <span class="d-none d-sm-inline">Part&nbsp;</span>
+            2
           </a>
           <ul class="dropdown-menu">
             <li>
-              <a class="dropdown-item" href="part-2.html">Edit the content of your page</a>
+              <a class="dropdown-item" href="part-2.html#part_2">Edit the content of your page</a>
             </li>
             <li>
               <hr class="dropdown-divider">
@@ -89,8 +91,9 @@
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link dropdown-toggle text-light d-flex align-items-center px-2 px-md-3" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">
-            Part 3
+          <a class="nav-link dropdown-toggle text-light d-flex align-items-center px-2 px-lg-3" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">
+            <span class="d-none d-sm-inline">Part&nbsp;</span>
+            3
           </a>
           <ul class="dropdown-menu">
             <li>
@@ -99,23 +102,45 @@
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link dropdown-toggle text-light d-flex align-items-center px-2 px-md-3" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">
-            Part 4
+          <a class="nav-link dropdown-toggle text-light d-flex align-items-center px-2 px-lg-3" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">
+            <span class="d-none d-sm-inline">Part&nbsp;</span>
+            4
           </a>
           <ul class="dropdown-menu">
             <li>
-              <a class="dropdown-item" href="#">Towards your group website</a>
+              <a class="dropdown-item" href="part-4.html#part_4">Towards your group website</a>
+            </li>
+            <li>
+              <hr class="dropdown-divider">
+            </li>
+            <li>
+              <a class="dropdown-item" href="part-4.html#overview_goals"><span class="badge rounded-pill bg-buas">4.1</span> Overview & goals</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="part-4.html#web_design"><span class="badge rounded-pill bg-buas">4.2</span> Your design process</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="part-4.html#templates"><span class="badge rounded-pill bg-buas">4.3</span> A tour of our templates</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="part-4.html#ux_patterns"><span class="badge rounded-pill bg-buas">4.4</span> UX Patterns for the web</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="part-4.html#bootstrap_grid"><span class="badge rounded-pill bg-buas">4.5</span> The Bootstrap Grid</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="part-4.html#collaboration"><span class="badge rounded-pill bg-buas">4.6</span> Tips for collaboration</a>
             </li>
           </ul>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle text-light d-flex align-items-center px-2 px-md-3" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">
-            <img class="me-1" src="images/common/clipboard-check.svg" width="15" alt="Checklists">
+          <a class="nav-link dropdown-toggle text-light d-flex align-items-center px-2 px-lg-3" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">
+            <img class="me-md-1" src="images/common/clipboard-check.svg" width="15" alt="Checklists">
             <span class="d-none d-md-inline">Checklists</span>
           </a>
           <ul class="dropdown-menu">
             <li>
-              <a class="dropdown-item" href="#">Individual Assignment</a>
+              <a class="dropdown-item" href="checklist-individual.html">Individual Assignment</a>
             </li>
             <li>
               <a class="dropdown-item" href="#">Group Assignment</a>
@@ -123,14 +148,14 @@
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-light d-flex align-items-center px-2 px-md-3" href="https://web.microsoftstream.com/channel/987d2668-18d7-4d84-9342-4774e7d0ba94" target="_blank">
-            <img class="me-1" src="images/common/film.svg" width="15" alt="Videos">
+          <a class="nav-link text-light d-flex align-items-center px-2 px-lg-3" href="https://web.microsoftstream.com/channel/987d2668-18d7-4d84-9342-4774e7d0ba94" target="_blank">
+            <img class="me-md-1" src="images/common/film.svg" width="15" alt="Videos">
             <span class="d-none d-md-inline">Videos</span>
           </a>
         </li>
         <li class="nav-item ms-auto">
-          <a class="nav-link text-light d-flex align-items-center px-2 px-md-3 bg-success" data-bs-toggle="offcanvas" href="#searchOffcanvas" role="button" aria-controls="searchOffcanvas">
-            <img class="me-1" src="images/common/search.svg" width="15" alt="Videos">
+          <a class="nav-link text-light d-flex align-items-center px-2 px-lg-3 bg-danger bg-gradient" data-bs-toggle="offcanvas" href="#searchOffcanvas" role="button" aria-controls="searchOffcanvas">
+            <img class="me-md-1" src="images/common/search.svg" width="15" alt="Videos">
             <span class="d-none d-md-inline">Search</span>
           </a>
         </li>
