Fixes in Part 4

--- a/part-4.html
+++ b/part-4.html
@@ -387,8 +387,8 @@
               <a href="images/part-4/restaurant-page-2-postits.jpg" target="_blank">
                 <img class="img-fluid d-block mx-auto my-1" src="images/part-4/restaurant-page-2-postits.jpg" alt="Scan of a paper prototype with added post-its">
               </a>
+              <figcaption class="fst-italic text-center">This is the same paper prototype as above, but with information added via post-its</figcaption>
             </figure>
-            <figcaption class="fst-italic text-center">This is the same paper prototype as above, but with information added via post-its</figcaption>
             <p>During the usability test, take notes and/or record the session. If you record audio or video for participants, you normally need to make them sign a consent form that clearly states the purpose of data collection.</p>
             <p>Finish the sessions with “debrief” questions, where you ask your participants what they thought of your product and of the testing session. They may provide you with additional feedback that simply observing their behaviour couldn’t elicit. For example, even if they found the experience easy and straightforward, they might not think they would use your product in real life. Try to find out the reasons.</p>
             <h4>Reflecting on a usability test</h4>
@@ -448,8 +448,13 @@
               <li>In the <em>root</em> folder:
                 <ul>
                   <li>The <strong>index.html</strong> page, which is the landing page that you get if you <u>do not</u> type any HTML file name.</li>
-                  <li>All other HTML files. So far, this is only the <strong>corporate.html</strong> file that you can edit to create a &ldquo;corporate&rdquo; section which will be used to grade some elements of the Content, Marketing and Management units.</li>
-                  <li>If you decide to divide your content in multiple pages, you will create additional HTML files here. You can duplicate the <strong>index.html</strong> file to do so (this is how the corporate page was create).</li>
+                  <li>All other HTML files. This includes:
+                    <ul>
+                      <li><strong>corporate.html</strong>, that you can edit to create a &ldquo;corporate&rdquo; section which will be used to grade some elements of the Content, Marketing and Management units.</li>
+                      <li><strong>landing.html</strong> which you can use as a minimal landing page while your website is under construction.</li>
+                    <li>If you decide to divide your content in multiple pages, you will create additional HTML files here. You can duplicate the <strong>index.html</strong> file to do so (this is how the corporate page was create).</li>
+                    </ul>
+                  </li>
                   <li>You will notice a file named <strong>README.md</strong>. It is not part of the website itself but it provides useful information that is displayed on the GitHub repository</li>
                 </ul>
               </li>
@@ -626,7 +631,6 @@
               </div>
             </div>
           </div>
-          </div>
           <div class="col-md-6 col-xxl-5 py-3">
             <h3 class="color-blue text-center">Carousels</h3>
             <p>Carousels (whose name comes from the fun fair attraction also known as &ldquo;merry-go-round&rdquo;) are a great way of showcasing visual content in a dynamic way.</p>
@@ -696,7 +700,7 @@
                   <h4 class="multi-collapse multi-collapse collapse collapse-horizontal mx-1 my-0">Menu</h4>
                   <button type="button" class="btn-close multi-collapse collapse collapse-horizontal ms-auto" aria-label="Close navigation bar" data-bs-toggle="collapse" data-bs-target=".multi-collapse"></button>
                 </div>
-                <button class="navbar-toggler px-0 mt-2 border-0 mx-auto multi-collapse collapse show" type="button" data-bs-toggle="collapse" data-bs-target=".multi-collapse" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler px-0 mt-2 border-0 mx-auto multi-collapse collapse show" type="button" data-bs-toggle="collapse" data-bs-target=".multi-collapse" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="h-100 multi-collapse collapse collapse-horizontal" style="width:280px;">
@@ -732,6 +736,7 @@
               <p>Click on the cross or on the logo to collapse again</p>
             </div>
           </div>
+        </div>
         </article>
         <footer class="row bg-gray">
           <div class="col-12 mt-3 mb-4 d-flex flex-wrap justify-content-evenly">
