Separated search engine from index

--- a/checklist-individual.html
+++ b/checklist-individual.html
@@ -256,7 +256,7 @@
         </div>
       </section>
 
-
+    <script type="text/javascript" src="js/search.js"></script>
     </main>
   </body>
 </html>
