Links to videos

--- a/part-2.html
+++ b/part-2.html
@@ -197,7 +197,7 @@
               <a class="btn btn-danger fs-4 m-2" href="#avoid_errors"><span class="badge text-danger rounded-pill bg-white">2.4</span> Avoid errors</a>
             </li>
             <li>
-              <a class="btn btn-danger fs-4 m-2" href="#link"><span class="badge text-danger rounded-pill bg-white">2.5</span> Link to images and pages</a>
+              <a class="btn btn-danger fs-4 m-2" href="#link"><span class="badge text-danger rounded-pill bg-white">2.5</span> Link to pages and images</a>
             </li>
             <li>
               <a class="btn btn-danger fs-4 m-2" href="#manage_images"><span class="badge text-danger rounded-pill bg-white">2.6</span> Manage images</a>
@@ -274,7 +274,7 @@
           <div class="col-md-6">
             <h5>
               <img class="me-1" src="images/common/film.svg" width="16" alt="film icon">
-              <a class="link-light" href="https://web.microsoftstream.com/" target="_blank">Watch on Microsoft Stream</a>
+              <a class="link-light" href="https://web.microsoftstream.com/video/8256866b-f6ec-4ced-821b-5c40a4f05ce7" target="_blank">Watch on Microsoft Stream</a>
             </h5>
             <ul>
               <li>You don&rsquo;t need to remember the whole list of HTML elements, but you need to pick the right ones when coding.</li>
@@ -582,8 +582,8 @@
               <tbody>
                 <tr>
                   <th><a href="https://developer.chrome.com/docs/devtools/" target="_blank">Google Chrome</a></th>
-                  <td rowspan="3"><span class="border border-dark rounded bg-white px-1 my-1">F12</span> or <span class="border border-dark rounded bg-white px-1 my-1">Ctrl</span>+<wbr><span class="border border-dark rounded bg-white px-1 my-1">Shift</span>+<span class="border border-dark rounded bg-white px-1 my-1">I</span></td>
-                  <td rowspan="3"><span class="border border-dark rounded bg-white px-1 my-1">Command</span><wbr>+<span class="border border-dark rounded bg-white px-1 my-1">Option</span><wbr>+<span class="border border-dark rounded bg-white px-1 my-1">I</span></td>
+                  <td rowspan="3" class="align-middle"><span class="border border-dark rounded bg-white px-1 my-1">F12</span> or <span class="border border-dark rounded bg-white px-1 my-1">Ctrl</span>+<wbr><span class="border border-dark rounded bg-white px-1 my-1">Shift</span>+<span class="border border-dark rounded bg-white px-1 my-1">I</span></td>
+                  <td rowspan="3" class="align-middle"><span class="border border-dark rounded bg-white px-1 my-1">Command</span><wbr>+<span class="border border-dark rounded bg-white px-1 my-1">Option</span><wbr>+<span class="border border-dark rounded bg-white px-1 my-1">I</span></td>
                 </tr>
                 <tr>
                   <th><a href="https://developer.mozilla.org/en-US/docs/Tools" target="_blank">Mozilla Firefox</a></th>
@@ -659,7 +659,7 @@
           <div class="col-md-6">
             <h5>
               <img class="me-1" src="images/common/film.svg" width="16" alt="film icon">
-              <a class="link-light" href="https://web.microsoftstream.com/" target="_blank">Watch on Microsoft Stream</a>
+              <a class="link-light" href="https://web.microsoftstream.com/video/a5511659-686a-4ea9-b90e-120421a39de5" target="_blank">Watch on Microsoft Stream</a>
             </h5>
             <ul>
               <li>Name the files and folders in your project correctly.</li>
@@ -930,15 +930,15 @@
       <section id="link">
         <header class="section-header row justify-content-center text-light bg-gradient py-5">
           <div class="col-2 col-md-1 text-end">
-            <h2 class="bg-buas rounded-pill display-6 fw-bold py-1 px-2 d-inline-block">2.4</h2>
+            <h2 class="bg-buas rounded-pill display-6 fw-bold py-1 px-2 d-inline-block">2.5</h2>
           </div>
           <div class="col-10 col-md-5">
-            <h2 class="display-3 fw-bolder lh-1 mb-4">Link to images and pages</h2>
+            <h2 class="display-3 fw-bolder lh-1 mb-4">Link to pages and images</h2>
           </div>
           <div class="col-md-6">
             <h5>
               <img class="me-1" src="images/common/film.svg" width="16" alt="film icon">
-              <a class="link-light" href="https://web.microsoftstream.com/" target="_blank">Watch on Microsoft Stream</a>
+              <a class="link-light" href="https://web.microsoftstream.com/video/48fd3425-abf5-4238-b21b-8a537edca55b" target="_blank">Watch on Microsoft Stream</a>
             </h5>
             <ul>
               <li>Use &lt;a href=" or &lt;img src=" followed by the location of a page or image.</li>
@@ -1134,7 +1134,7 @@
       <section id="manage_images">
         <header class="section-header row justify-content-center text-light bg-gradient py-5">
           <div class="col-2 col-md-1 text-end">
-            <h2 class="bg-buas rounded-pill display-6 fw-bold py-1 px-2 d-inline-block">2.4</h2>
+            <h2 class="bg-buas rounded-pill display-6 fw-bold py-1 px-2 d-inline-block">2.6</h2>
           </div>
           <div class="col-10 col-md-5">
             <h2 class="display-3 fw-bolder lh-1 mb-4">Manage images</h2>
@@ -1142,7 +1142,7 @@
           <div class="col-md-6">
             <h5>
               <img class="me-1" src="images/common/film.svg" width="16" alt="film icon">
-              <a class="link-light" href="https://web.microsoftstream.com/" target="_blank">Watch on Microsoft Stream</a>
+              <a class="link-light" href="https://web.microsoftstream.com/video/30af8d60-9d88-4f97-8628-5893d75350c4" target="_blank">Watch on Microsoft Stream</a>
             </h5>
             <ul>
               <li>Use images to grab the attention of your audience.</li>
