--- a/part-1.html
+++ b/part-1.html
@@ -194,13 +194,13 @@
               <a class="btn btn-danger fs-4 m-2" href="#cybersecurity"><span class="badge text-danger rounded-pill bg-white">1.3</span> Cybersecurity & privacy</a>
             </li>
             <li>
-              <a class="btn btn-danger fs-4 m-2" href="#setting_up_tools"><span class="badge text-danger rounded-pill bg-white">1.4</span> Setting up the tools</a>
+              <a class="btn btn-danger fs-4 m-2" href="#setting_up_tools"><span class="badge text-danger rounded-pill bg-white">1.4</span> Set up the tools</a>
             </li>
             <li>
               <a class="btn btn-danger fs-4 m-2" href="#basic_html"><span class="badge text-danger rounded-pill bg-white">1.5</span> The basic structure of HTML</a>
             </li>
             <li>
-              <a class="btn btn-danger fs-4 m-2" href="#editing_publishing"><span class="badge text-danger rounded-pill bg-white">1.6</span> Editing & Publishing</a>
+              <a class="btn btn-danger fs-4 m-2" href="#editing_publishing"><span class="badge text-danger rounded-pill bg-white">1.6</span> Edit & Publish</a>
             </li>
           </ul>
         </div>
@@ -449,10 +449,7 @@
             <h2 class="display-3 fw-bolder lh-1 mb-4">Cyber<wbr>security & Privacy</h2>
           </div>
           <div class="col-md-6">
-            <h5>
-              <img class="me-1" src="images/common/film.svg" width="16" alt="film icon">
-              <a class="link-light" href="https://web.microsoftstream.com/" target="_blank">Watch on Microsoft Stream</a>
-            </h5>
+            <h5>Summary</h5>
             <ul>
               <li>Always use secure, encrypted connections.</li>
               <li>A password manager is the best way to ensure you are using safe passwords.</li>
@@ -542,7 +539,7 @@
           <div class="col-md-6">
             <h5>
               <img class="me-1" src="images/common/film.svg" width="16" alt="film icon">
-              <a class="link-light" href="https://web.microsoftstream.com/" target="_blank">Watch on Microsoft Stream</a>
+              <a class="link-light" href="https://web.microsoftstream.com/video/aa741d36-66dd-4be0-869f-59d32ece9d82" target="_blank">Watch on Microsoft Stream</a>
             </h5>
             <ul>
               <li>Install a web editor such as Dreamweaver.</li>
@@ -1081,7 +1078,7 @@
           <div class="col-md-6">
             <h5>
               <img class="me-1" src="images/common/film.svg" width="16" alt="film icon">
-              <a class="link-light" href="https://web.microsoftstream.com/" target="_blank">Watch on Microsoft Stream</a>
+              <a class="link-light" href="https://web.microsoftstream.com/video/5c5e47e3-5802-4761-8a0a-86d2ab0715ba" target="_blank">Watch on Microsoft Stream</a>
             </h5>
             <ul>
               <li>We&rsquo;re at the end of part 1!</li>
